[gd_scene load_steps=8 format=1]

[ext_resource path="res://font_theme.thm" type="Theme" id=1]
[ext_resource path="res://Scripts/score_controls.gd" type="Script" id=2]
[ext_resource path="res://Scripts/money_panel_background.gd" type="Script" id=3]

[sub_resource type="StyleBoxFlat" id=1]

content_margin/left = -1.0
content_margin/right = -1.0
content_margin/top = -1.0
content_margin/bottom = -1.0
bg_color = Color( 1, 1, 1, 1 )
light_color = Color( 0, 0, 0, 1 )
dark_color = Color( 0, 0, 0, 1 )
border_size = 2
border_blend = false
draw_bg = true

[sub_resource type="StyleBoxFlat" id=2]

content_margin/left = -1.0
content_margin/right = -1.0
content_margin/top = -1.0
content_margin/bottom = -1.0
bg_color = Color( 0.784314, 0.784314, 0.784314, 1 )
light_color = Color( 0, 0, 0, 1 )
dark_color = Color( 0, 0, 0, 1 )
border_size = 2
border_blend = false
draw_bg = true

[sub_resource type="StyleBoxFlat" id=3]

content_margin/left = -1.0
content_margin/right = -1.0
content_margin/top = -1.0
content_margin/bottom = -1.0
bg_color = Color( 0.501961, 0.501961, 0.501961, 1 )
light_color = Color( 0, 0, 0, 1 )
dark_color = Color( 0, 0, 0, 1 )
border_size = 2
border_blend = false
draw_bg = true

[sub_resource type="StyleBoxFlat" id=4]

content_margin/left = -1.0
content_margin/right = -1.0
content_margin/top = -1.0
content_margin/bottom = -1.0
bg_color = Color( 1, 1, 1, 1 )
light_color = Color( 0, 0, 0, 1 )
dark_color = Color( 0, 0, 0, 1 )
border_size = 2
border_blend = false
draw_bg = true

[node name="ScoreUI" type="Control"]

anchor/left = 3
anchor/top = 3
anchor/right = 3
anchor/bottom = 3
focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
theme/theme = ExtResource( 1 )
margin/left = 320.0
margin/top = 240.0
margin/right = 280.0
margin/bottom = 200.0
script/script = ExtResource( 2 )

[node name="Panel" type="Panel" parent="."]

focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 0.0
margin/top = 0.0
margin/right = 134.0
margin/bottom = 98.0
custom_styles/panel = SubResource( 1 )
script/script = ExtResource( 3 )

[node name="VBoxContainer" type="VBoxContainer" parent="."]

anchor/left = 3
anchor/top = 3
anchor/right = 3
anchor/bottom = 3
focus/ignore_mouse = false
focus/stop_mouse = false
size_flags/horizontal = 2
size_flags/vertical = 3
margin/left = 16.0
margin/top = 16.0
margin/right = -110.0
margin/bottom = -72.0
alignment = 1

[node name="WinMessage" type="Label" parent="VBoxContainer"]

focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 0
margin/left = 0.0
margin/top = 0.0
margin/right = 126.0
margin/bottom = 18.0
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "You win!"
align = 1
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1

[node name="LoseMessage" type="Label" parent="VBoxContainer"]

focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 0
margin/left = 0.0
margin/top = 22.0
margin/right = 126.0
margin/bottom = 40.0
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "You lose!"
align = 1
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1

[node name="Money" type="Label" parent="VBoxContainer"]

focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 0
margin/left = 0.0
margin/top = 44.0
margin/right = 126.0
margin/bottom = 62.0
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "Earnings: XX"
align = 1
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1

[node name="Button" type="Button" parent="VBoxContainer"]

focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 3
margin/left = 0.0
margin/top = 66.0
margin/right = 126.0
margin/bottom = 88.0
custom_styles/hover = SubResource( 2 )
custom_styles/pressed = SubResource( 3 )
custom_styles/normal = SubResource( 4 )
custom_colors/font_color_disabled = Color( 0, 0, 0, 1 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_colors/font_color_hover = Color( 0, 0, 0, 1 )
custom_colors/font_color_pressed = Color( 0, 0, 0, 1 )
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
text = "Ok"
flat = false

[connection signal="pressed" from="VBoxContainer/Button" to="." method="_on_Button_pressed"]


